--- a/App/Admin/View/Page/fieldadd.html
+++ b/App/Admin/View/Page/fieldadd.html
@@ -1,13 +1,11 @@
 <extend name="Layout:form"/>
-<block name="title"><title>后台管理中心</title></block>
-
+<block name="title"><title>模型管理</title></block>
 <block name="subnav">
-    <h2 class="title-1 line-x f14 fb blue lh28">模型管理--<?php echo $model['name']; ?>字段管理</h2>
-    <a class="add fb" href="__CONTROLLER__/add?modelid=<?php echo $model['id']; ?>"><em>添加字段</em></a> | <a href="__CONTROLLER__/index?modelid=<?php echo $model['id']; ?>"><em>管理模型字段</em></a>
+    <a href="__CONTROLLER__/fields?template=<?php echo $template; ?>">字段管理</a>　|　<a class="on" href="__CONTROLLER__/fieldadd?template=<?php echo $template; ?>"><em>添加字段</em></a>　|　<a href="<?php echo U('Page/index'); ?>"><em>页面管理</em></a>　|　<a href="<?php echo U('Page/template'); ?>"><em>模板设置</em></a>
 </block>
 <block name="main">
-    <form name="myform" id="myform" action="__CONTROLLER__/add" method="post">
-        <input type="hidden" name="info[issystem]" id="issystem" value="1">
+    <form name="myform" id="myform" action="__CONTROLLER__/fieldadd" method="post">
+        <input type="hidden" name="info[template]" value="<?php echo $template; ?>">
         <div class="common-form">
             <table width="100%" class="table_form contentWrap">
                 <tr>
@@ -70,26 +68,6 @@
                     <th><strong>数据校验未通过的提示信息</strong></th>
                     <td><input type="text" name="info[errortips]" value="" size="50" class="input-text"></td>
                 </tr>
-                <tr>
-                    <th><strong>值唯一</strong></th>
-                    <td><input type="radio" name="info[isunique]" value="1" id="field_allow_isunique1"> 是 <input type="radio" name="info[isunique]" value="0" id="field_allow_isunique0" checked> 否</td>
-                </tr>
-                <tr>
-                    <th><strong>作为搜索条件</strong></th>
-                    <td><input type="radio" name="info[issearch]" value="1" id="field_allow_search1"> 是 <input type="radio" name="info[issearch]" value="0" id="field_allow_search0" checked> 否</td>
-                </tr>
-                <tr>
-                    <th><strong>显示在列表页</strong></th>
-                    <td><input type="radio" name="info[islist]" value="1"> 是 <input type="radio" name="info[islist]" value="0" checked> 否</td>
-                </tr>
-                <!-- <tr>
-                    <th><strong>作为基本信息</strong><br />基本信息将在添加页面左侧显示</th>
-                    <td><input type="radio" name="info[isbase]" value="1"  checked> 是 <input type="radio" name="info[isbase]" value="0"> 否 </td>
-                </tr> -->
-                <!-- <tr>
-                    <th><strong>在前台投稿中显示</strong></th>
-                    <td><input type="radio" name="info[isadd]" value="1" checked /> 是 <input type="radio" name="info[isadd]" value="0" /> 否</td>
-                </tr> -->
             </table>
         </div>
         <div class="bk15"></div>
@@ -104,10 +82,9 @@
             $("#field").formValidator({onshow:"请输入字段名",onfocus:"字段名长度必须为1-20位"}).regexValidator({regexp:"^[a-zA-Z]{1}([a-zA-Z0-9]|[_]){0,19}[^_]$",onerror:"字段名称不正确"}).inputValidator({min:1,max:20,onerror:"字段名长度必须为1-20位"}).ajaxValidator({
                 type : "get",
                 url : "__CONTROLLER__/public_checkfield",
-                data : "modelid=<?php echo $modelid?>",
+                data : "template=<?php echo $template?>",
                 datatype : "html",
                 cached:false,
-                getdata:{issystem:'issystem'},
                 async:'false',
                 success : function(data){
                     if( data == "1" ){
