--- a/App/Admin/View/Page/edit.html
+++ b/App/Admin/View/Page/edit.html
@@ -59,7 +59,7 @@
                             <p><strong>模板</strong></p>
                             <select name="page[template]">
                                 <?php foreach ($template_list as $key => $value) { ?>
-                                <option value="<?php echo $key; ?>" <?php if ($page['template'] == $key) { echo "selected"; } ?>><?php echo $value; ?></option>
+                                <option value="<?php echo $key; ?>" <?php if ($content['template'] == $key) { echo "selected"; } ?>><?php echo $value; ?></option>
                                 <?php } ?>
                             </select>
                         </div>
