POST 添加模板设置功能， 修复积分字段类型bug。修复已知bug

--- a/App/Admin/View/Index/index.html
+++ b/App/Admin/View/Index/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="col-1 lf cat-menu" id="display_center_id" style="display:none;" height="100%">
             <div class="content">
-                <iframe name="center_frame" id="center_frame" src="" frameborder="false" scrolling="auto" style="border: none; height: 556px;" width="100%" height="auto" allowtransparency="true"></iframe>
+                <iframe name="center_frame" id="center_frame" src="" frameborder="0" scrolling="auto" style="border: none; height: 556px;" width="100%" height="auto" allowtransparency="true"></iframe>
             </div>
         </div>
         <div class="col-auto mr8">
@@ -59,7 +59,7 @@
             </div>
             <div class="col-1">
                 <div class="content" style="position:relative; overflow:hidden;">
-                    <iframe name="right" id="rightMain" src="__MODULE__/Index/main" frameborder="false" scrolling="auto" width="100%" height="auto" allowtransparency="true"></iframe>
+                    <iframe name="right" id="rightMain" src="__MODULE__/Index/main" frameborder="0" scrolling="auto" width="100%" height="auto" allowtransparency="true"></iframe>
                 </div>
             </div>
         </div>
