post 添加filter功能(未完成)

--- a/App/Admin/View/Page/add.html
+++ b/App/Admin/View/Page/add.html
@@ -25,6 +25,12 @@
                                 <div id='content_tip'></div>
                             </td>
                         </tr>
+                        <tr>
+                            <th>相关文章</th>
+                            <td>
+
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
