--- a/App/Admin/View/Post/index.html
+++ b/App/Admin/View/Post/index.html
@@ -1,7 +1,42 @@
 <extend name="Layout:list" />
 <block name="title"><title><?php echo $module['name']; ?>列表</title></block>
+<block name="subheader">
+    <script type="text/javascript" src="{:asset('js/JSCal/jscal2.js')}"></script>
+    <script type="text/javascript" src="{:asset('js/JSCal/lang/cn.js')}"></script>
+    <link rel="stylesheet" type="text/css" href="{:asset('css/JSCal/jscal2.css')}">
+    <link rel="stylesheet" type="text/css" href="{:asset('css/JSCal/border-radius.css')}">
+    <link rel="stylesheet" type="text/css" href="{:asset('css/JSCal/win2k/win2k.css')}">
+</block>
 <block name="subnav">
-    <a class="add fb" href="<?php echo U('Post/add') . "?moduleid=" . $module['id']; ?>"><em>添加内容</em></a>    <a class="on" href="<?php echo U('Post/index') . "?moduleid=" . $module['id']; ?>"><em>内容管理</em></a>
+    <b style="font-size: 20px;"><?php echo $module['name']; ?></b>　<a class="on" href="<?php echo U('Post/add') . "?moduleid=" . $module['id']; ?>"><em>添加内容</em></a>
+</block>
+<block name="search">
+    <div id="searchid">
+        <form name="searchform" action="" method="get">
+            <table width="100%" cellspacing="0" class="search-form">
+                <tbody>
+                    <tr>
+                        <td>
+                            <div class="explain-col">
+                                <select name="s[date]" class="filter-select">
+                                    <option value="0">全部日期</option>
+                                    <?php foreach ($months as $key => $month) { ?>
+                                        <option value="<?php echo $month; ?>" <?php if ($s['month'] == $month) { echo "selected"; } ?>><?php echo $month['month']; ?></option>
+                                    <?php } ?>
+                                </select>
+                                <?php foreach ($taxonomies as $key => $taxonomy) { ?>
+                                <?php if (isset($termsGroupByTaxonomy[$taxonomy['name']])) { ?>
+                                <?php echo \Org\Util\Form::term_select($termsGroupByTaxonomy[$taxonomy['name']], $tax[$taxonomy['name']], 'name="tax[' . $taxonomy['name'] . ']"', '所有' . $taxonomy['label']); ?>
+                                <?php } } ?>
+                                <input name="s[title]" type="text" value="<?php echo $s['title']; ?>" class="input-text">
+                                <input type="submit" name="search" class="button" value="搜索">
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </form>
+    </div>
 </block>
 <block name="main">
     <form name="myform" action="<?php echo U('Post/listorder') . "?moduleid=" . $module['id']; ?>" method="post">
