--- a/App/Home/View/hhailuo/Index/index.html
+++ b/App/Home/View/hhailuo/Index/index.html
@@ -128,9 +128,9 @@
                 <div class="row header">
                     <h1>TP-Admin</h1>
                     <p class="desc">3.0 全新架构，重磅来袭。助你开启快速开发之路;)。</p>
-                    <a href="<?php echo U('Admin/Index/index'); ?>" target="_blank" class="btn btn-outline-inverse btn-lg">进入系统</a>
-                    <a href="http://www.hhailuo.com/tp-admin-wiki" class="btn btn-outline-inverse btn-lg">WIKI</a>
-                    <a href="http://www.hhailuo.com/about-us" target="_blank" class="btn btn-outline-inverse btn-lg">作者介绍</a>
+                    <a href="<?php echo U('Admin/Index/index'); ?>" target="_blank" class="btn btn-outline-inverse btn-lg">后台演示</a>
+                    <a href="<?php echo U('Content/index'); ?>" class="btn btn-outline-inverse btn-lg">CMS Demo</a>
+                    <a href="http://www.hhailuo.com/about-us" target="_blank" class="btn btn-outline-inverse btn-lg">关于作者</a>
                     <a href="http://git.oschina.net/xiaoyao-work/TP-Admin" target="_blank" class="btn btn-outline-inverse btn-lg">os-china下载</a>
                     <a href="https://github.com/xiaoyao-work/TP-Admin" target="_blank" class="btn btn-outline-inverse btn-lg">github下载</a>
                     <p class="desc">重组站群系统，全新模型架构，融入WP Taxonomy分类管理思想；强大的权限系统，模型、分类全自动节点。历经三月只为简单，快捷，舒适。</p>
@@ -145,7 +145,7 @@
                             <div class="col-xs-4 pull-left donate">
                                 <p class="donate-title">赞助</p>
                                 <div>
-                                    <p><img class="img-rounded" src="{:asset('images/donate.png')}" width="200px" alt="支付宝扫描二维码"/></p>
+                                    <p><img class="img-rounded" src="{:asset('images/donate.png')}" width="150px" alt="支付宝扫描二维码"/></p>
                                     <p class="donate-desc">支付宝扫描二维码</p>
                                 </div>
                             </div>
